--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   provider: ^6.1.1
   shared_preferences: ^2.2.2
   country_code_picker: ^3.0.0
+  pay: ^2.0.0  # For authentic Android payment experience (test mode)
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
