--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,12 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  
+  # Add these packages
+  http: ^1.4.0
+  fl_chart: ^1.0.0
+  flutter_dotenv: ^5.1.0
+  
   font_awesome_flutter: ^10.7.0
   provider: ^6.1.1
   shared_preferences: ^2.2.2
@@ -67,6 +73,7 @@ flutter:
     - assets/
     - assets/images/
     - assets/icons/
+    - .env
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
