--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   http: ^1.4.0
   fl_chart: ^1.0.0
   flutter_dotenv: ^5.1.0
+  intl: ^0.20.2
   
   font_awesome_flutter: ^10.7.0
   provider: ^6.1.1
@@ -73,6 +74,7 @@ flutter:
     - assets/
     - assets/images/
     - assets/icons/
+    - assets/payment/
     - .env
 
   # An image asset can refer to one or more resolution-specific "variants", see
